--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -64,6 +64,19 @@
             {{ end }} {{ end }}
           </ul>
         </div>
+        <!-- links -->
+        <div class="col-lg-2 col-sm-4 col-6 mb-5 mb-md-0">
+          <h4 class="text-white mb-5 text-uppercase">{{ i18n "links" }}</h4>
+          <ul class="list-unstyled">
+            {{ range site.Menus.footer }}
+            <li class="mb-3">
+              <a class="text-color" href="{{ .URL | absLangURL }}"
+                >{{ .Name }}</a
+              >
+            </li>
+            {{ end }}
+          </ul>
+        </div>
         <!-- support -->
         <div class="col-lg-2 col-sm-4 col-6 mb-5 mb-md-0">
           <h4 class="text-white mb-5 text-uppercase">{{ i18n "courses" }}</h4>
@@ -76,6 +89,18 @@
           </ul>
         </div>
         <!-- support -->
+        <div class="col-lg-2 col-sm-4 col-6 mb-5 mb-md-0">
+          <h4 class="text-white mb-5 text-uppercase">
+            {{ i18n "new_notice" }}
+          </h4>
+          <ul class="list-unstyled">
+            {{ range first 3 (where site.RegularPages "Type" "notice")}}
+            <li class="mb-3">
+              <a class="text-color" href="{{ .Permalink }}">{{ .Title }}</a>
+            </li>
+            {{ end }}
+          </ul>
+        </div>
       </div>
     </div>
   </div>
