--- a/layouts/partials/preloader.html
+++ b/layouts/partials/preloader.html
@@ -1,9 +1,8 @@
-{{ if site.Params.preloader.enable }}
-{{ "<!-- preloader start -->" | safeHTML }}
+{{ if site.Params.preloader.enable }} {{ "<!-- preloader start -->" | safeHTML
+}}
 <div class="preloader">
   {{ with site.Params.preloader.preloader }}
-  <img src="{{ . | absURL }}" alt="preloader">
+  <img src="{{ . | absURL }}" alt="preloader" />
   {{ end }}
 </div>
-{{ "<!-- preloader end -->" | safeHTML }}
-{{ end }}
+{{ "<!-- preloader end -->" | safeHTML }} {{ end }}
